--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -30,6 +30,8 @@
         <ion-item menu-close href="#/app/playlists">
           Playlists
         </ion-item>
+        <ion-item menu-close ui-sref="app.settings" translate="SETTINGS">
+          Settings
       </ion-list>
     </ion-content>
   </ion-side-menu>
