--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,8 +30,9 @@
         <ion-item menu-close href="#/app/playlists">
           Playlists
         </ion-item>
-        <ion-item menu-close ui-sref="app.settings" translate="SETTINGS">
-          Settings
+
+        <ion-item menu-close ui-sref="app.whiststanding" translate="HOME"></ion-item>
+        <ion-item menu-close ui-sref="app.settings" translate="SETTINGS"></ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
