Adds the players features

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -32,6 +32,7 @@
         </ion-item>
 
         <ion-item menu-close ui-sref="app.whiststanding" translate="HOME"></ion-item>
+        <ion-item menu-close ui-sref="app.players" translate="PLAYERS"></ion-item>
         <ion-item menu-close ui-sref="app.settings" translate="SETTINGS"></ion-item>
       </ion-list>
     </ion-content>
