--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -33,6 +33,7 @@
 
         <ion-item menu-close ui-sref="app.whiststanding" translate="HOME"></ion-item>
         <ion-item menu-close ui-sref="app.players" translate="PLAYERS"></ion-item>
+        <ion-item menu-close ui-sref="app.changePoints" translate="CHANGE_POINTS"></ion-item>
         <ion-item menu-close ui-sref="app.settings" translate="SETTINGS"></ion-item>
       </ion-list>
     </ion-content>
