--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,12 +3,15 @@
     <!-- The content of the page -->
     <h1>Home</h1>
 
-    <button class="button button-dark" id="startNewGame" ng-click="vm.startNewGame()">
-      Start new game
-    </button>
-    <button class="button button-dark" id="resumeGame" ng-click="vm.resumeGame()">
-      Resume game
-    </button>
-
+    <div class="container">
+      <div class="col col-60">
+        <button class="button button-block button-dark" id="startNewGame" ng-click="vm.startNewGame()">
+          Start new game
+        </button>
+        <button class="button button-block button-dark" id="resumeGame" ng-click="vm.resumeGame()">
+          Resume game
+        </button>
+    </div>
+    </div>
   </ion-content>
 </ion-view>
